js/js.translator/testData/incremental/invalidation/jsCodeWithCrossModuleInliner/lib1/l1.2.kt
inline fun foo() = js("'44'")
